[package]
name = "string_calculator"
description = "A string calculator to compute formulas inside strings."
license = "MIT OR Apache-2.0"
version = "0.3.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/FriquetLuca/string_calculator"
authors = [ "Friquet Luca" ]

[dependencies]
rust_decimal = { version = "1.35", default-features = false, features = ["maths"], optional = true }

[lib]
name = "string_calculator"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
default = ["eval_decimal", "eval_f64", "eval_i64"]
eval_decimal = ["dep:rust_decimal"]
eval_f64 = []
eval_i64 = []
